--- a/README.mkd
+++ b/README.mkd
@@ -14,3 +14,7 @@ This uses Markdown syntax for the presentation files.
 - `:ExitPresentation` to exit presentation.
 
 thanks.
+
+## screen cast
+
+[YouTube - presen.vim](http://www.youtube.com/watch?v=Y_ur3391rI8)
